risolti bug per l'upload

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 <div id="footer_container"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="script/scriptDario.js"></script>
-<script src="script/PhotoSlider.js"></script>
+<script src="js/scriptDario.js"></script>
+<script src="js/PhotoSlider.js"></script>
 <script>
 	var photos=[];
 	var currentPosition=0;
