modificato il footer - risolto alcuni problemi responsive

--- a/footer.html
+++ b/footer.html
@@ -1,18 +1,60 @@
-<footer class="footer">
-    <div class="location_container">
-        <div id="googleMap"></div>
-        <div class="location_info">
-            <h1>SEDE AMMINISTRATIVA</h1>
-            <p>via Annunzatella,23 - Castellammare di Stabia (NA)</p>
-            <h1>SEDE OPERATIVA</h1>
-            <p>via Casarelli - loc. Marna - San Antonio Abate (NA)</p>
-            <h1>CONTATTACI</h1>
-            <p>Tel. 081/8702093 - 081/8735620</p>
-            <a href="mailto:gesa.srl_@libero.it?Subject=Info" target="_top">Send Mail</a>
-        </div>
+<footer class="footer-distributed">
+
+    <div class="footer-left">
+
+        <a href="#" class="footer__logo"><img class="logo2"src="resources/Gesa-logo-3.png"></a>
+
+        <p class="footer-links">
+
+            <a href="#">Home</a>
+            ·
+            <a href="#">Pitturazione e Sabbiatura</a>
+            ·
+            <a href="#">Impianti ed Edilizia</a>
+            ·
+            <a href="#">Trasporti e Rifiuti</a>
+            ·
+            <a href="#">Chi siamo</a>
+
+        </p>
+
+        <p class="footer-company-name">P.IVA 123456789 - REA 123456789</p>
     </div>
 
-    <div class="copyright_container">
-        <span class="copyright"> © Copyright 2017 G.E.S.A. srl - Tutti i diritti sono riservati.</br> P.IVA 123456789 REA 123456789</span>
+    <div class="footer-center">
+
+        <div>
+            <i class="fa fa-map-marker"></i>
+            <p>SEDE AMMINISTRATIVA<span>via Annunziatella, 23</span>Castellammare di Stabia (NA)</p>
+        </div>
+
+        <div>
+            <i class="fa fa-phone"></i>
+            <p>081 870 20 93</p>
+        </div>
+
+        <div>
+            <i class="fa fa-map-marker"></i>
+            <p>SEDE OPERATIVA<span>via Casarelli - loc. Marna</span>Sant' Antonio Abate (NA)</p>
+        </div>
+
+        <div>
+            <i class="fa fa-phone"></i>
+            <p>081 873 56 20</p>
+        </div>
+
+        <div>
+            <i class="fa fa-envelope"></i>
+            <p><a href="mailto:gesa.srl_@libero.it">Contattaci</a></p>
+        </div>
+
     </div>
+
+    <div class="footer-right">
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.3376387874805!2d14.486277915475187!3d40.71058317933207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bbd3be581f505%3A0x2c7450bbfae32824!2sVia+Annunziatella%2C+23%2C+80053+Castellammare+di+Stabia+NA!5e0!3m2!1sit!2sit!4v1503176727491" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+        <p class="footer-company-about">
+            © Copyright 2017 G.E.S.A. srl - Tutti i diritti sono riservati.
+        </p>
 </footer>
