--- a/index.html
+++ b/index.html
@@ -34,12 +34,19 @@
 	<div class="banner__copy">
 		<div class="banner__copy__text">
 			<h3>G.E.S.A. S.r.l.</h3>
-			<p>G.E.S.A. S.r.l. nasce nel 2010 dalla ventennale esperienza maturata nel campo della gestione rifiuti pericolosi e non, del proprio direttore tecnico Geom. Pascucci Paolo, il quale gestisce ad oggi appalti con aziende e privati tra cui FINCANTIERI S.p.A., ENEL, SIELTE S.p.A., Enti pubblici, garantendo i più elevati standard di qualità, serietà, affidabilità e professionalità.</p>
+			<p class="testi">L'azienda nasce nel 2010 dalla ventennale esperienza maturata nel campo della gestione rifiuti pericolosi e non, del proprio direttore tecnico Geom. <strong>Pascucci Paolo</strong>, il quale gestisce ad oggi appalti con aziende e privati tra cui <strong>FINCANTIERI S.p.A., ENEL, SIELTE S.p.A., Enti pubblici,</strong> garantendo i più elevati standard di qualità, serietà, affidabilità e professionalità.</p>
 		</div>
 	</div>
 </section>
+
+<!--CITAZIONE CON SFONDO-->
 <div class="middle_page_divider">
 	<h1 class="middle_page_divider_content">"L'ambiente è il mondo dove l'uomo realizza i suoi progetti, il suo rispetto il nostro credo"</h1>
+</div>
+
+<!--I NOSTRI SERVIZI SONO:-->
+<div class="intestazione__servizi">
+	<h1 class="servizi"> I nostri servizi</h1>
 </div>
 
 <!-- CARDS -->
@@ -49,7 +56,7 @@
 		<img class="card__image" src="resources/Card/Trasporti.png">
 		<div class="card__copy">
 			<h3>Trasporto materiali e rifiuti</h3>
-			<p>Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti come la trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
+			<p class="testi">Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti come la trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
 		</div>
 	</div>
 	<!-- card 2 -->
@@ -57,7 +64,7 @@
 		<img class="card__image" src="resources/Card/Impianti.png">
 		<div class="card__copy">
 			<h3>Impianti ed edilizia</h3>
-			<p>Offriamo la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e autostradali fornendo la completa gestione e manutenzione delle stesse. Ci occupiamo inoltre di realizzare carpenterie metal-meccaniche e navali e impiantistica industriale e civile. Sono comprese operazioni di montaggio, smontaggio e riparazione di impiantistica e tubazioni industriali di qualsiasi genere. In piena eco sostenibilità realizziamo impianti per l’energia alternativa: fotovoltaico, termica, solare.</p>
+			<p class="testi">Offriamo la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e autostradali fornendo la completa gestione e manutenzione delle stesse. Ci occupiamo inoltre di realizzare carpenterie metal-meccaniche e navali e impiantistica industriale e civile. Sono comprese operazioni di montaggio, smontaggio e riparazione di impiantistica e tubazioni industriali di qualsiasi genere. In piena eco sostenibilità realizziamo impianti per l’energia alternativa: fotovoltaico, termica, solare.</p>
 		</div>
 	</div>
 	<!-- card 3 -->
@@ -65,18 +72,21 @@
 		<img class="card__image" src="resources/Card/Pitturazione.png">
 		<div class="card__copy">
 			<h3>Pitturazione e sabbiatura</h3>
-			<p>Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura. La pitturazione è un processo di rivestimento di superfici metalliche effettuato a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. La sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per l'incisione di iscrizioni ed immagini su marmo e pietre.Gesa annovera tra i suoi mezzi macchine apposite tra le quali un'unità UHP 2500 bar ad alta pressione.</p>
+			<p class="testi">Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura. La pitturazione è un processo di rivestimento di superfici metalliche effettuato a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. La sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per l'incisione di iscrizioni ed immagini su marmo e pietre.Gesa annovera tra i suoi mezzi macchine apposite tra le quali un'unità UHP 2500 bar ad alta pressione.</p>
 		</div>
 	</div>
 </section>
 
-<!-- BANNER AUTORIZZAZIONI -->
+<!--G.E.S.A. COLLABORA CON:-->
+<div class="intestazione__partner">
+	<h1 class="partner"> G.E.S.A. COLLABORA CON:</h1>
+</div>
+
+<!-- BANNER PARTNERS -->
 <section class="banner__autorizzazioni clearfix">
-	<div><h1>G.E.S.A. COLLABORA CON</h1></div>
 	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Fincantieri.png"></div>
 	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Sielte.png"></div>
 	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Enel.png"></div>
-
 </section>
 
 <!-- FOOTER -->
