--- a/page4.html
+++ b/page4.html
@@ -25,7 +25,7 @@
 
 <article class="single">
 	<div class="single__copy">
-		<p>G.E.S.A. S.r.l. nasce nel 2010 dalla ventennale esperienza maturata nel campo della gestione rifiuti
+		<p class="testi">G.E.S.A. S.r.l. nasce nel 2010 dalla ventennale esperienza maturata nel campo della gestione rifiuti
 pericolosi e non, del proprio direttore tecnico Geom. Pascucci Paolo, il quale gestisce ad oggi appalti con
 aziende e privati tra cui FINCANTIERI S.p.A., ENEL, SIELTE S.p.A., Enti pubblici, garantendo i più
 elevati standard di qualità, serietà, affidabilità e professionalità. Il compendio di servizi che offriamo
