modifica header menu dario blu/bianco

--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
+<script src="js/Map.js"></script>
 <footer class="footer-distributed">
 
     <div class="footer-left">
@@ -52,7 +53,11 @@
 
     <div class="footer-right">
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.3376387874805!2d14.486277915475187!3d40.71058317933207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bbd3be581f505%3A0x2c7450bbfae32824!2sVia+Annunziatella%2C+23%2C+80053+Castellammare+di+Stabia+NA!5e0!3m2!1sit!2sit!4v1503176727491" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+        <div id="googleMap" style="width:100%;height:230px;"></div>
+        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.3376387874805!2d14.486277915475187!3d40.71058317933207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bbd3be581f505%3A0x2c7450bbfae32824!2sVia+Annunziatella%2C+23%2C+80053+Castellammare+di+Stabia+NA!5e0!3m2!1sit!2sit!4v1503176727491" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzT4oQlcKY-ZhebzE5Pu8cML35uS_XSVE&callback=myMap"></script>
 
         <p class="footer-company-about">
             © Copyright 2017 G.E.S.A. srl - Tutti i diritti sono riservati.
