--- a/footer.html
+++ b/footer.html
@@ -7,15 +7,15 @@
 
         <p class="footer-links">
 
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             ·
-            <a href="#">Pitturazione e Sabbiatura</a>
+            <a href="page3.html">Pitturazione e Sabbiatura</a>
             ·
-            <a href="#">Impianti ed Edilizia</a>
+            <a href="page2.html">Impianti ed Edilizia</a>
             ·
-            <a href="#">Trasporti e Rifiuti</a>
+            <a href="page1.html">Trasporti e Rifiuti</a>
             ·
-            <a href="#">Chi siamo</a>
+            <a href="page4.html">Chi siamo</a>
 
         </p>
 
