--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 
 <header id="header" class="header clearfix">
-    <a href="#" class="header__logo"><img class="logo"src="resources/Gesa-logo-3.png"></a>
+    <a href="index.html" class="header__logo"><img class="logo"src="resources/Gesa-logo-3.png"></a>
     <a href="#" class="header__icon-bar">
         <span></span>
         <span></span>
