risolto problema visualizzazione dots per lo slider foto

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- HEADER -->
 <div id="header_container"></div>
 <!-- COVER -->
-<div id="dots-dots-container">
+<div id="dots-dots-container" class="dots-container">
 	<div id="dots-container"> </div>
 </div>
 
