[FIX] implementato preload immagini per evitare flash nello slider [FIX] modificati title delle varie pagine ed i nomi dei file

--- a/footer.html
+++ b/footer.html
@@ -9,13 +9,13 @@
 
             <a href="index.html">Home</a>
             ·
-            <a href="page3.html">Pitturazione e Sabbiatura</a>
+            <a href="pitturazione.html">Pitturazione e Sabbiatura</a>
             ·
-            <a href="page2.html">Impianti ed Edilizia</a>
+            <a href="impianti.html">Impianti ed Edilizia</a>
             ·
-            <a href="page1.html">Trasporti e Rifiuti</a>
+            <a href="trasporto.html">Trasporti e Rifiuti</a>
             ·
-            <a href="page4.html">Chi siamo</a>
+            <a href="chi_siamo.html">Chi siamo</a>
 
         </p>
 
