--- a/header.html
+++ b/header.html
@@ -8,10 +8,10 @@
     </a>
     <!--<div class="header__menu__container clearfix">-->
     <ul id="menuList" class="header__menu animate">
-        <li class="header__menu__item"><a href="page4.html">Chi siamo</a></li>
-        <li class="header__menu__item"><a href="page1.html">Trasporto<br> materiali e rifiuti</a></li>
-        <li class="header__menu__item"><a href="page2.html">Impianti<br> ed edilizia</a></li>
-        <li class="header__menu__item"><a href="page3.html">Pitturazione<br> e sabbiatura</a></li>
+        <li class="header__menu__item"><a href="chi_siamo.html">Chi siamo</a></li>
+        <li class="header__menu__item"><a href="trasporto.html">Trasporto<br> materiali e rifiuti</a></li>
+        <li class="header__menu__item"><a href="impianti.html">Impianti<br> ed edilizia</a></li>
+        <li class="header__menu__item"><a href="pitturazione.html">Pitturazione<br> e sabbiatura</a></li>
         <li class="header__menu__item"><a href="index.html">Home</a></li>
     </ul>
     <!--</div>-->
@@ -23,11 +23,11 @@
     </a>
     <ul id="menuList_min" class="header__menu__dario animate"></ul>
 </div>
-<script src="script/scriptDario.js"></script>
-<script>
-    $(".header__icon-bar").click(function(e) {
-        $(".header__menu").toggleClass("is-open");
-        e.preventDefault();
-    });
-    $(document).ready(menuShower());
-</script>
+<!--<script src="js/scriptDario.js"></script>-->
+<!--<script>-->
+    <!--$(".header__icon-bar").click(function(e) {-->
+        <!--$(".header__menu").toggleClass("is-open");-->
+        <!--e.preventDefault();-->
+    <!--});-->
+    <!--$(document).ready(menuShower());-->
+<!--</script>-->
