--- a/impianti.html
+++ b/impianti.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>title</title>
+	<title>GESA S.R.L.</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
 	<link rel="stylesheet" href="stile.css">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
