--- a/header.html
+++ b/header.html
@@ -23,11 +23,11 @@
     </a>
     <ul id="menuList_min" class="header__menu__dario animate"></ul>
 </div>
-<!--<script src="js/scriptDario.js"></script>-->
-<!--<script>-->
-    <!--$(".header__icon-bar").click(function(e) {-->
-        <!--$(".header__menu").toggleClass("is-open");-->
-        <!--e.preventDefault();-->
-    <!--});-->
-    <!--$(document).ready(menuShower());-->
-<!--</script>-->
+<script src="js/scriptDario.js"></script>
+<script>
+    $(".header__icon-bar").click(function(e) {
+        $(".header__menu").toggleClass("is-open");
+        e.preventDefault();
+    });
+    $(document).ready(menuShower());
+</script>
