--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<img class="card__image" src="resources/Card/Trasporti.png">
 		<div class="card__copy">
 			<h3>Trasporto materiali e rifiuti</h3>
-			<p class="testi">Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti come la trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
+			<p class="testi">Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti eseguendo operazioni quali: trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
 		</div>
 	</div>
 	<!-- card 2 -->
