Aggiunta card più modifiche random

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 		<img class="card__image" src="resources/Card/Trasporti.png">
 		<div class="card__copy">
 			<h3>Trasporto materiali e rifiuti</h3>
-			<p class="testi">Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti eseguendo operazioni quali: trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
+			<p class="testi">Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti eseguendo operazioni quali: trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio trattando rifiuti di categorie 1o, 4, 5, 8, 9, 10a. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
 		</div>
 	</div>
 	<!-- card 2 -->
 	<div class="card">
-		<img class="card__image" src="resources/Card/Impianti.png">
+		<img class="card__image" src="resources/Card/Scaffolding.png">
 		<div class="card__copy">
 			<h3>Impianti ed edilizia</h3>
 			<p class="testi">Offriamo la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e autostradali fornendo la completa gestione e manutenzione delle stesse. Ci occupiamo inoltre di realizzare carpenterie metal-meccaniche e navali e impiantistica industriale e civile. Sono comprese operazioni di montaggio, smontaggio e riparazione di impiantistica e tubazioni industriali di qualsiasi genere. In piena eco sostenibilità realizziamo impianti per l’energia alternativa: fotovoltaico, termica, solare.</p>
@@ -72,21 +72,41 @@
 		<img class="card__image" src="resources/Card/Pitturazione.png">
 		<div class="card__copy">
 			<h3>Pitturazione e sabbiatura</h3>
-			<p class="testi">Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura. La pitturazione è un processo di rivestimento di superfici metalliche effettuato a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. La sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per l'incisione di iscrizioni ed immagini su marmo e pietre.Gesa annovera tra i suoi mezzi macchine apposite tra le quali un'unità UHP 2500 bar ad alta pressione.</p>
+			<p class="testi">Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura utilizzati nell'ambito dell'anticorrosione (civile, navale, industriale). La pitturazione è un processo di rivestimento di superfici metalliche effettuato a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. La sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per l'incisione di iscrizioni ed immagini su marmo e pietre.Gesa annovera tra i suoi mezzi macchine apposite tra le quali un'unità UHP 2500 bar ad alta pressione.</p>
 		</div>
 	</div>
+
+	<!-- card 4 -->
+	<div class="card">
+		<img class="card__image" src="resources/Card/Impianti.png">
+		<div class="card__copy">
+			<h3>Noleggio</h3>
+			<p class="testi">Gesa offre la possibilità di noleggio di mezzi quali: elettrocompressori a varie grandezze, pompe ad alta pressione, sollevatori frontali da una tonnellata e laterali da 7 tonnellate, gru semoventi da 15 a 70 tonnellate di portata, piattaforme semoventi. </p>
+		</div>
+	</div>
+
 </section>
 
 <!--G.E.S.A. COLLABORA CON:-->
 <div class="intestazione__partner">
-	<h1 class="partner"> G.E.S.A. COLLABORA CON:</h1>
+	<h1 class="partner"> PARTNERSHIP:</h1>
 </div>
 
 <!-- BANNER PARTNERS -->
-<section class="banner__autorizzazioni clearfix">
+<section class="banner__autorizzazioni_partnership clearfix">
 	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Fincantieri.png"></div>
 	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Sielte.png"></div>
 	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Enel.png"></div>
+</section>
+
+<div class="intestazione__partner">
+	<h1 class="partner"> CERTIFICAZIONI:</h1>
+</div>
+
+<!-- BANNER CERTIFICAZIONI -->
+<section class="banner__autorizzazioni clearfix">
+	<div class="banner__image__certificazioni"><img class="logo" src="resources/Card/logoministero.png"></div>
+	<div class="banner__image__certificazioni"><img class="logo" src="resources/Card/logoministero2.jpg"></div>
 </section>
 
 <!-- FOOTER -->
