--- a/footer.html
+++ b/footer.html
@@ -36,7 +36,7 @@
 
         <div>
             <i class="fa fa-map-marker"></i>
-            <p>SEDE OPERATIVA<span>via Casarelli - loc. Marna</span>Sant' Antonio Abate (NA)</p>
+            <p>SEDE OPERATIVA<span>via Casarielli - loc. Marna -</span><span>Centro di stoccaggio rifiuti autorizzato</span>Sant' Antonio Abate (NA)</p>
         </div>
 
         <div>
