aggiunte immagini certificazioni

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <section class="cards clearfix">
 	<!-- card 1 -->
 	<div class="card">
-		<img class="card__image" src="resources/Card/Trasporti.png">
+		<img class="card__image" src="resources/img%20card/square-trasporto.png">
 		<div class="card__copy">
 			<h3>Trasporto materiali e rifiuti</h3>
 			<p class="testi">Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti eseguendo operazioni quali: trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio trattando rifiuti di categorie 1o, 4, 5, 8, 9, 10a. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
@@ -61,7 +61,7 @@
 	</div>
 	<!-- card 2 -->
 	<div class="card">
-		<img class="card__image" src="resources/Card/Scaffolding.png">
+		<img class="card__image" src="resources/img%20card/square-impianti.png">
 		<div class="card__copy">
 			<h3>Impianti ed edilizia</h3>
 			<p class="testi">Offriamo la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e autostradali fornendo la completa gestione e manutenzione delle stesse. Ci occupiamo inoltre di realizzare carpenterie metal-meccaniche e navali e impiantistica industriale e civile. Sono comprese operazioni di montaggio, smontaggio e riparazione di impiantistica e tubazioni industriali di qualsiasi genere. In piena eco sostenibilità realizziamo impianti per l’energia alternativa: fotovoltaico, termica, solare.</p>
@@ -69,7 +69,7 @@
 	</div>
 	<!-- card 3 -->
 	<div class="card">
-		<img class="card__image" src="resources/Card/Pitturazione.png">
+		<img class="card__image" src="resources/img%20card/square-paint.png">
 		<div class="card__copy">
 			<h3>Pitturazione e sabbiatura</h3>
 			<p class="testi">Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura utilizzati nell'ambito dell'anticorrosione (civile, navale, industriale). La pitturazione è un processo di rivestimento di superfici metalliche effettuato a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. La sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per l'incisione di iscrizioni ed immagini su marmo e pietre.Gesa annovera tra i suoi mezzi macchine apposite tra le quali un'unità UHP 2500 bar ad alta pressione.</p>
@@ -78,7 +78,7 @@
 
 	<!-- card 4 -->
 	<div class="card">
-		<img class="card__image" src="resources/Card/Impianti.png">
+		<img class="card__image" src="resources/img%20card/square-rent.png">
 		<div class="card__copy">
 			<h3>Noleggio</h3>
 			<p class="testi">Gesa offre la possibilità di noleggio di mezzi quali: elettrocompressori a varie grandezze, pompe ad alta pressione, sollevatori frontali da una tonnellata e laterali da 7 tonnellate, gru semoventi da 15 a 70 tonnellate di portata, piattaforme semoventi. </p>
@@ -94,9 +94,9 @@
 
 <!-- BANNER PARTNERS -->
 <section class="banner__autorizzazioni_partnership clearfix">
-	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Fincantieri.png"></div>
-	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Sielte.png"></div>
-	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Enel.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/img%20partnership/Fincantieri.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/img%20partnership/Sielte.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/img%20partnership/Enel.png"></div>
 </section>
 
 <div class="intestazione__partner">
@@ -105,8 +105,10 @@
 
 <!-- BANNER CERTIFICAZIONI -->
 <section class="banner__autorizzazioni clearfix">
-	<div class="banner__image__certificazioni"><img class="logo" src="resources/Card/logoministero.png"></div>
-	<div class="banner__image__certificazioni"><img class="logo" src="resources/Card/logoministero2.jpg"></div>
+	<div class="banner__image__certificazioni"><img class="logo" src="resources/img%20certificazioni/ministero.png"></div>
+	<div class="banner__image__certificazioni"><img class="logo" src="resources/img%20certificazioni/albo.png"></div>
+	<div class="banner__image__certificazioni"><img class="logo" src="resources/img%20certificazioni/iso-9001.png"></div>
+	<div class="banner__image__certificazioni"><img class="logo" src="resources/img%20certificazioni/iso-14001.png"></div>
 </section>
 
 <!-- FOOTER -->
