[FIX] modificata immaggine trasporto

--- a/trasporto.html
+++ b/trasporto.html
@@ -14,7 +14,7 @@
 <div id="header_container"></div>
 
 <!-- COVER -->
-<section class="cover" style="background-image: url(resources/PhotoSlider/Rifiuti.jpg);">
+<section class="cover" style="background-image: url(resources/PhotoSlider/Gru_60_T.jpeg);">
 	<div class="cover__filter"></div>
 	<div class="cover__caption">
 		<div class="cover__caption__copy">
