mod tasti ita/eng

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 <!--Modal-->
 <div id="myModal" class="modal">
 	<div id="caption">
-		<button>ita</button>
-		<button>eng</button>
+		<button class="button">ita</button>
+		<button class="button">eng</button>
 	</div>
 	<span class="close">&times;</span>
 	<iframe id="img01" class="modal-content" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"></iframe>
