modificati loghi iso

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 <section class="banner__autorizzazioni clearfix">
 	<div class="banner__image__certificazioni"><img class="logo" src="resources/img%20certificazioni/ministero.png"></div>
 	<div class="banner__image__certificazioni"><img class="logo" src="resources/img%20certificazioni/albo.png"></div>
-	<div class="banner__image__certificazioni clickable"><img class="logo" src="resources/img%20certificazioni/iso-9001.png"></div>
-	<div class="banner__image__certificazioni clickable"><img class="logo" src="resources/img%20certificazioni/iso-14001.png"></div>
-	<div class="banner__image__certificazioni clickable"><img class="logo" src="resources/img%20certificazioni/iso18001.png"></div>
+	<div class="banner__image__certificazioni clickable"><img class="logo3" src="resources/img%20certificazioni/iso-9001.png"></div>
+	<div class="banner__image__certificazioni clickable"><img class="logo3" src="resources/img%20certificazioni/iso-14001.png"></div>
+	<div class="banner__image__certificazioni clickable"><img class="logo3" src="resources/img%20certificazioni/iso-18001.png"></div>
 </section>
 
 <!--Modal-->
