aggiunta pagina noleggio

--- a/footer.html
+++ b/footer.html
@@ -19,7 +19,7 @@
 
         </p>
 
-        <p class="footer-company-name">P.IVA 123456789 - REA 123456789</p>
+        <p class="footer-company-name">P.IVA 06771181218 - REA NA-8382225</p>
     </div>
 
     <div class="footer-center">
@@ -46,7 +46,7 @@
 
         <div>
             <i class="fa fa-envelope"></i>
-            <p><a href="mailto:gesa.srl_@libero.it">Contattaci</a></p>
+            <p><a href="mailto:gesa.srl_@libero.it">info@gesasrl.net</a></p>
         </div>
 
     </div>
