--- a/header.html
+++ b/header.html
@@ -12,6 +12,7 @@
         <li class="header__menu__item"><a href="trasporto.html">Trasporto<br> materiali e rifiuti</a></li>
         <li class="header__menu__item"><a href="impianti.html">Impianti<br> ed edilizia</a></li>
         <li class="header__menu__item"><a href="pitturazione.html">Pitturazione<br> e sabbiatura</a></li>
+        <li class="header__menu__item"><a href="noleggio.html">Noleggio</a></li>
         <li class="header__menu__item"><a href="index.html">Home</a></li>
     </ul>
     <!--</div>-->
