--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<img class="card__image" src="resources/img%20card/square-trasporto.png">
 		<div class="card__copy">
 			<h3>Trasporto materiali e rifiuti</h3>
-			<p class="testi">Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti eseguendo operazioni quali: trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio trattando rifiuti di categorie 1o, 4, 5, 8, 9, 10a. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
+			<p class="testi">Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti eseguendo operazioni quali: trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio trattando rifiuti di categorie 1F, 4E, 5E, 8F, 9E, 10A/E. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
 		</div>
 	</div>
 	<!-- card 2 -->
@@ -72,7 +72,7 @@
 		<img class="card__image" src="resources/img%20card/square-paint.png">
 		<div class="card__copy">
 			<h3>Pitturazione e sabbiatura</h3>
-			<p class="testi">Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura utilizzati nell'ambito dell'anticorrosione (civile, navale, industriale). La pitturazione è un processo di rivestimento di superfici metalliche effettuato a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. La sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per l'incisione di iscrizioni ed immagini su marmo e pietre.Gesa annovera tra i suoi mezzi macchine apposite tra le quali un'unità UHP 2500 bar ad alta pressione.</p>
+			<p class="testi">Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura utilizzati nell'ambito dell'anticorrosione (civile, navale, industriale). La pitturazione è un processo di rivestimento di superfici metalliche effettuato a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. La sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per l'incisione di iscrizioni ed immagini su marmo e pietre.</p>
 		</div>
 	</div>
 
