rimossi loghi sielte e enel

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 <!-- BANNER PARTNERS -->
 <section class="banner__autorizzazioni_partnership clearfix">
 	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/img%20partnership/Fincantieri.png"></div>
-	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/img%20partnership/Sielte.png"></div>
-	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/img%20partnership/Enel.png"></div>
+	<!--<div class="banner__image__autorizzazioni"><img class="logo" src="resources/img%20partnership/Sielte.png"></div>-->
+	<!--<div class="banner__image__autorizzazioni"><img class="logo" src="resources/img%20partnership/Enel.png"></div>-->
 </section>
 
 <div class="intestazione__partner">
