aggiunto link a noleggio nel footer

--- a/footer.html
+++ b/footer.html
@@ -9,6 +9,8 @@
 
             <a href="index.html">Home</a>
             ·
+            <a href="noleggio.html">Noleggio</a>
+            ·
             <a href="pitturazione.html">Pitturazione e Sabbiatura</a>
             ·
             <a href="impianti.html">Impianti ed Edilizia</a>
