modificati testi cards

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<img class="card__image" src="resources/img%20card/square-trasporto.png">
 		<div class="card__copy">
 			<h3>Trasporto materiali e rifiuti</h3>
-			<p class="testi">Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti eseguendo operazioni quali: trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio trattando rifiuti di categorie 1F, 4E, 5E, 8F, 9E, 10A/E. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
+			<p class="testi">Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti eseguendo operazioni quali: trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio trattando rifiuti di categorie 1o, 4, 5, 8, 9, 10a. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.Eseguiamo in piena eco sostenibilità opere di bonifica ambientale e di ogni tipologia di sito disponendoci inoltre della possibilità di noleggio di autobotti per la pulizia proponendo inoltre video ispezioni a tubature ed impianti.</p>
 		</div>
 	</div>
 	<!-- card 2 -->
@@ -64,7 +64,7 @@
 		<img class="card__image" src="resources/img%20card/square-impianti.png">
 		<div class="card__copy">
 			<h3>Impianti ed edilizia</h3>
-			<p class="testi">Offriamo la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e autostradali fornendo la completa gestione e manutenzione delle stesse. Ci occupiamo inoltre di realizzare carpenterie metal-meccaniche e navali e impiantistica industriale e civile. Sono comprese operazioni di montaggio, smontaggio e riparazione di impiantistica e tubazioni industriali di qualsiasi genere. In piena eco sostenibilità realizziamo impianti per l’energia alternativa: fotovoltaico, termica, solare.</p>
+			<p class="testi">Offriamo la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e autostradali, demaniali e forestali fornendo la completa gestione e manutenzione delle stesse. Ci occupiamo inoltre di realizzare carpenterie metal-meccaniche e navali e impiantistica industriale e civile. Sono comprese operazioni di montaggio, smontaggio e riparazione di impiantistica e tubazioni industriali di qualsiasi genere. Disponiamo di uno staff specializzato che ci permette di offrire la progettazione, realizzazione e installazione di impianti elettrici, idrici, antincendio, telefonici, di condizionamento, automazione, e tutto quanto concerne impianti che utilizzano energie alternative come il fotovoltaico, l’energia termica, solare ecc… Tra le nostre competenze rientra la possibilità di realizzare lavori di scavo, demolizione, movimentazione materie, con conseguente gestione e messa in riserve degli stessi.</p>
 		</div>
 	</div>
 	<!-- card 3 -->
@@ -72,7 +72,7 @@
 		<img class="card__image" src="resources/img%20card/square-paint.png">
 		<div class="card__copy">
 			<h3>Pitturazione e sabbiatura</h3>
-			<p class="testi">Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura utilizzati nell'ambito dell'anticorrosione (civile, navale, industriale). La pitturazione è un processo di rivestimento di superfici metalliche effettuato a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. La sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per l'incisione di iscrizioni ed immagini su marmo e pietre.</p>
+			<p class="testi">Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura utilizzati nell'ambito dell'anticorrosione (civile, navale, industriale). La pitturazione è una complessa operazione di rivestimento delle superfici in genere metalliche che viene effettuato da operatori pienamente competenti nel settore equipaggiati con le migliori attrezzature. La pitturazione è utilizzata sopratutto a scopo decorativo e per proteggere le superfici dall’azione di agenti aggressivi, logoranti e corrosivi di diverso tipo. La sabbiatura è un operazione meccanica molto specializzata usata per lo più nella pulizia superficiale di metalli o per scopi espressivi quali l’incisione di iscrizioni ed immagini su marmi e pietre.</p>
 		</div>
 	</div>
 
@@ -81,7 +81,7 @@
 		<img class="card__image" src="resources/img%20card/square-rent.png">
 		<div class="card__copy">
 			<h3>Noleggio</h3>
-			<p class="testi">Gesa offre la possibilità di noleggio di mezzi quali: elettrocompressori a varie grandezze, pompe ad alta pressione, sollevatori frontali da una tonnellata e laterali da 7 tonnellate, gru semoventi da 15 a 70 tonnellate di portata, piattaforme semoventi. </p>
+			<p class="testi">Gesa offre la possibilità di noleggio di mezzi quali: elettrocompressori a varie grandezze, pompe ad alta pressione, sollevatori frontali da una tonnellata e laterali da 7 tonnellate, gru semoventi da 15 a 70 tonnellate di portata, piattaforme semoventi. Ancora disponiamo di un parco automezzi fornito dei mezzi adatti alle diverse operazioni richieste nel settore edile/navale. Tutte le attrezzature sono sottoposte a ordinarie misure di manutenzione e controllo. La lista completa delle principali attrezzature è presente nella pagina apposita.</p>
 		</div>
 	</div>
 
