--- a/noleggio.html
+++ b/noleggio.html
@@ -18,7 +18,7 @@
 	<div class="cover__filter"></div>
 	<div class="cover__caption">
 		<div class="cover__caption__copy">
-			<h1>TRASPORTO MATERIALI E RIFIUTI</h1>
+			<h1>NOLEGGIO</h1>
 		</div>
 	</div>
 </section>
