Tolti i link alle pagine

--- a/footer.html
+++ b/footer.html
@@ -9,13 +9,13 @@
 
             <a href="index.html">Home</a>
             ·
-            <a href="noleggio.html">Noleggio</a>
-            ·
-            <a href="pitturazione.html">Pitturazione e Sabbiatura</a>
-            ·
-            <a href="impianti.html">Impianti ed Edilizia</a>
-            ·
-            <a href="trasporto.html">Trasporti e Rifiuti</a>
+            <a href="noleggio.html">Attrezzature</a>
+            <!--·-->
+            <!--<a href="pitturazione.html">Pitturazione e Sabbiatura</a>-->
+            <!--·-->
+            <!--<a href="impianti.html">Impianti ed Edilizia</a>-->
+            <!--·-->
+            <!--<a href="trasporto.html">Trasporti e Rifiuti</a>-->
             ·
             <a href="chi_siamo.html">Chi siamo</a>
 
