--- a/header.html
+++ b/header.html
@@ -9,10 +9,10 @@
     <!--<div class="header__menu__container clearfix">-->
     <ul id="menuList" class="header__menu animate">
         <li class="header__menu__item"><a href="chi_siamo.html">Chi siamo</a></li>
-        <li class="header__menu__item"><a href="trasporto.html">Trasporto<br> materiali e rifiuti</a></li>
-        <li class="header__menu__item"><a href="impianti.html">Impianti<br> ed edilizia</a></li>
-        <li class="header__menu__item"><a href="pitturazione.html">Pitturazione<br> e sabbiatura</a></li>
-        <li class="header__menu__item"><a href="noleggio.html">Noleggio</a></li>
+        <!--<li class="header__menu__item"><a href="trasporto.html">Trasporto<br> materiali e rifiuti</a></li>-->
+        <!--<li class="header__menu__item"><a href="impianti.html">Impianti<br> ed edilizia</a></li>-->
+        <!--<li class="header__menu__item"><a href="pitturazione.html">Pitturazione<br> e sabbiatura</a></li>-->
+        <li class="header__menu__item"><a href="noleggio.html">Attrezzature</a></li>
         <li class="header__menu__item"><a href="index.html">Home</a></li>
     </ul>
     <!--</div>-->
